--- a/index.html
+++ b/index.html
@@ -173,43 +173,43 @@
             </section>
         </div>
         <div class="page" id="page2"> <!-- Popular Restaurants and Stalls page -->
-    <section>
-        <h2>Popular Restaurants and Stalls</h2>
-        <p>Here are some popular places where you can enjoy Chicken Rice:</p>
-        <div class="section-container">
-            <div class="section" id="restaurant1">
-                <h3>Tiong Bahru Hainanese Boneless Chicken Rice</h3>
-                <p><a href="https://maps.app.goo.gl/UXm2gN8ShW1iYsZ16" target="_blank">Locate Shop</a></p>
-                <img src="images/tb.jpg" alt="Tiong Bahru Hainanese Boneless Chicken Rice">
-                <p>Located in the heart of Tiong Bahru, this stall is famous for its succulent, boneless chicken and fragrant rice. Established over 20 years ago, it remains a favorite among locals and tourists alike.</p>
-                <p><strong>Customer Reviews:</strong> "The best chicken rice I've ever had!" - Jane Doe</p>
-                <p><strong>Signature Dish:</strong> Hainanese Boneless Chicken Rice</p>
-                <p><strong>Opening Hours:</strong> 10:00 AM - 8:00 PM daily</p>
-                <p><strong>Price Range:</strong> $5 - $10</p>
-            </div>
-            <div class="section" id="restaurant2">
-                <h3>Hawker Chan Soya Sauce Chicken Rice & Noodle</h3>
-                <p><a href="https://maps.app.goo.gl/f874GVU2gHmveQmx6" target="_blank">Locate Shop</a></p>
-                <img src="images/hawkerchan.jpg" alt="Hawker Chan Soya Sauce Chicken Rice & Noodle">
-                <p>Hawker Chan is world-renowned for its Michelin-starred soya sauce chicken. With affordable prices and exceptional taste, it’s a must-visit for any chicken rice lover.</p>
-                <p><strong>Customer Reviews:</strong> "Incredible value for a Michelin-star meal!" - John Smith</p>
-                <p><strong>Signature Dish:</strong> Soya Sauce Chicken Rice</p>
-                <p><strong>Opening Hours:</strong> 11:00 AM - 9:00 PM daily</p>
-                <p><strong>Price Range:</strong> $3 - $7</p>
-            </div>
-            <div class="section" id="restaurant3">
-                <h3>Ji De Lai Hainanese Chicken Rice</h3>
-                <p><a href="https://maps.app.goo.gl/m8ahxUzE8FSDE3Xt6" target="_blank">Locate Shop</a></p>
-                <img src="images/jdl.jpg" alt="Ji De Lai Hainanese Chicken Rice">
-                <p>Ji De Lai offers a traditional Hainanese chicken rice experience. Known for its tender chicken and rich, flavorful rice, it's a beloved spot for many.</p>
-                <p><strong>Customer Reviews:</strong> "Authentic and delicious!" - Mary Lee</p>
-                <p><strong>Signature Dish:</strong> Hainanese Chicken Rice</p>
-                <p><strong>Opening Hours:</strong> 9:00 AM - 7:00 PM daily</p>
-                <p><strong>Price Range:</strong> $4 - $8</p>
-            </div>
+            <section>
+                <h2>Popular Restaurants and Stalls</h2>
+                <p>Here are some popular places where you can enjoy Chicken Rice:</p>
+                <div class="section-container">
+                    <div class="section" id="restaurant1">
+                        <h3>Tiong Bahru Hainanese Boneless Chicken Rice</h3>
+                        <p><a href="https://maps.app.goo.gl/UXm2gN8ShW1iYsZ16" id="restaurant1link" target="_blank">Locate Shop</a></p>
+                        <img src="images/tb.jpg" alt="Tiong Bahru Hainanese Boneless Chicken Rice">
+                        <p>Located in the heart of Tiong Bahru, this stall is famous for its succulent, boneless chicken and fragrant rice. Established over 20 years ago, it remains a favorite among locals and tourists alike.</p>
+                        <p><strong>Customer Reviews:</strong> "The best chicken rice I've ever had!" - Jane Doe</p>
+                        <p><strong>Signature Dish:</strong> Hainanese Boneless Chicken Rice</p>
+                        <p><strong>Opening Hours:</strong> 10:00 AM - 8:00 PM daily</p>
+                        <p><strong>Price Range:</strong> $5 - $10</p>
+                    </div>
+                    <div class="section" id="restaurant2">
+                        <h3>Hawker Chan Soya Sauce Chicken Rice & Noodle</h3>
+                        <p><a href="https://maps.app.goo.gl/f874GVU2gHmveQmx6" id="restaurant2link" target="_blank">Locate Shop</a></p>
+                        <img src="images/hawkerchan.jpg" alt="Hawker Chan Soya Sauce Chicken Rice & Noodle">
+                        <p>Hawker Chan is world-renowned for its Michelin-starred soya sauce chicken. With affordable prices and exceptional taste, it’s a must-visit for any chicken rice lover.</p>
+                        <p><strong>Customer Reviews:</strong> "Incredible value for a Michelin-star meal!" - John Smith</p>
+                        <p><strong>Signature Dish:</strong> Soya Sauce Chicken Rice</p>
+                        <p><strong>Opening Hours:</strong> 11:00 AM - 9:00 PM daily</p>
+                        <p><strong>Price Range:</strong> $3 - $7</p>
+                    </div>
+                    <div class="section" id="restaurant3">
+                        <h3>Ji De Lai Hainanese Chicken Rice</h3>
+                        <p><a href="https://maps.app.goo.gl/m8ahxUzE8FSDE3Xt6" id="restaurant3link" target="_blank">Locate Shop</a></p>
+                        <img src="images/jdl.jpg" alt="Ji De Lai Hainanese Chicken Rice">
+                        <p>Ji De Lai offers a traditional Hainanese chicken rice experience. Known for its tender chicken and rich, flavorful rice, it's a beloved spot for many.</p>
+                        <p><strong>Customer Reviews:</strong> "Authentic and delicious!" - Mary Lee</p>
+                        <p><strong>Signature Dish:</strong> Hainanese Chicken Rice</p>
+                        <p><strong>Opening Hours:</strong> 9:00 AM - 7:00 PM daily</p>
+                        <p><strong>Price Range:</strong> $4 - $8</p>
+                    </div>
+                </div>
+            </section>
         </div>
-    </section>
-</div>
 
         <div class="page" id="page3"> <!-- Watch How to Make Chicken Rice page -->
             <section>
@@ -332,38 +332,48 @@
             </section>
         </div>
         <div class="page" id="page4"> <!-- Chicken Rice Cooking Game page -->
-            <section id="game">
-                <h2>Chicken Rice Cooking Game</h2>
-                <div id="instructions">
-                    <p>Follow the steps to prepare your chicken rice dish. Be careful with the timing to get the best score!</p>
-                </div>
-                <div id="controls">
-                    <div class="control-group">
-                        <div class="control" id="startCookRice">Start Cooking Rice</div>
-                        <div class="control" id="stopCookRice">Stop Cooking Rice</div>
+            <div class="game-container">
+                <section id="game">
+                    <h2>Chicken Rice Cooking Game</h2>
+                    <div id="instructions">
+                        <p>Follow the steps to prepare your chicken rice dish. Be careful with the timing to get the best score!</p>
                     </div>
-                    <div class="control-group">
-                        <div class="control" id="startCookChicken">Start Cooking Chicken</div>
-                        <div class="control" id="stopCookChicken">Stop Cooking Chicken</div>
+                    <div id="controls">
+                        <div class="control-group">
+                            <div class="control" id="startCookRice">Start Cooking Rice</div>
+                            <div class="control" id="stopCookRice">Stop Cooking Rice</div>
+                        </div>
+                        <div class="control-group">
+                            <div class="control" id="startCookChicken">Start Cooking Chicken</div>
+                            <div class="control" id="stopCookChicken">Stop Cooking Chicken</div>
+                        </div>
+                        <div class="control-group">
+                            <div class="control" id="serveDish">Serve Dish</div>
+                        </div>
                     </div>
-                    <div class="control-group">
-                        <div class="control" id="serveDish">Serve Dish</div>
+                    <div id="status">
+                        <div class="control-group">
+                            <p id="chickenStatus">Chicken: Raw</p> <!-- Initial status of Chicken -->
+                            <img id="imageChickenStatus" src="images/raw_chicken.jpg" alt="Chicken Status"> <!-- Image of raw chicken -->
+                        </div>
+                        <div class="control-group">
+                            <p id="riceStatus">Rice: Uncooked</p> <!-- Initial status of Rice -->
+                            <img id="imageRiceStatus" src="images/uncooked_rice.jpg" alt="Rice Status"> <!-- Image of uncooked rice -->
+                        </div>
+                        <p id="score">Score: 0</p> <!-- Initial score -->
                     </div>
-                </div>
-                <div id="status">
-                    <div class="control-group">
-                        <p id="chickenStatus">Chicken: Raw</p> <!-- Initial status of Chicken -->
-                        <img id="imageChickenStatus" src="images/raw_chicken.jpg" alt="Chicken Status"> <!-- Image of raw chicken -->
+                    <div id="result"></div> <!-- Area to display result of the game -->
+                    <div id="restartGame">Restart Game</div> <!-- Button to restart the game -->
+                </section>
+                <section id="trap-the-chicken">
+                    <h2>Trap the Chicken</h2>
+                    <div id="instructions">
+                        <p>Follow the steps to prepare your chicken rice dish. Be careful with the timing to get the best score!</p>
                     </div>
-                    <div class="control-group">
-                        <p id="riceStatus">Rice: Uncooked</p> <!-- Initial status of Rice -->
-                        <img id="imageRiceStatus" src="images/uncooked_rice.jpg" alt="Rice Status"> <!-- Image of uncooked rice -->
-                    </div>
-                    <p id="score">Score: 0</p> <!-- Initial score -->
-                </div>
-                <div id="result"></div> <!-- Area to display result of the game -->
-                <div id="restartGame">Restart Game</div> <!-- Button to restart the game -->
-            </section>
+                    <div id="gameArea"></div>
+                    <button id="restartButton" onclick="restartGame()">Restart Game</button>
+                </section>
+            </div>
         </div>
     </div>
 
