--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                 <section id="trap-the-chicken">
                     <h2>Trap the Chicken</h2>
                     <div id="instructions">
-                        <p>Follow the steps to prepare your chicken rice dish. Be careful with the timing to get the best score!</p>
+                        <p>Place blocks to trap the chicken!</p>
                     </div>
                     <div id="gameArea"></div>
                     <button id="restartButton" onclick="restartGame()">Restart Game</button>
