--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             <div class="game-container">
                 <!-- Chicken Rice Cooking Game Section -->
                 <section id="game">
-                    <h2>Chicken Rice Cooking Game</h2>
+                    <h2>Games Section</h2>
                     <div id="instructions">
                         <p>Follow the steps to prepare your chicken rice dish. Be careful with the timing to get the best score!</p>
                     </div>
