--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><button id="page1btn">Ingredients and Recipe</button></li>
             <li><button id="page2btn">Popular Restaurants and Stalls</button></li>
             <li><button id="page3btn">History Of Chicken Rice</button></li>
-            <li><button id="page4btn">Chicken Rice Cooking Game</button></li>
+            <li><button id="page4btn">Games</button></li>
         </ul>
     </nav>
 
@@ -343,7 +343,7 @@
             <div class="game-container">
                 <!-- Chicken Rice Cooking Game Section -->
                 <section id="game">
-                    <h2>Games Section</h2>
+                    <h2>Games</h2>
                     <div id="instructions">
                         <p>Follow the steps to prepare your chicken rice dish. Be careful with the timing to get the best score!</p>
                     </div>
