--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <section class="subpage" id="subpage1">
                 <button class="backbtn">Back to Ingredients and Recipe</button>
                 <h3>Steamed Chicken</h3>
-                <p>Chicken Rice is a popular dish that is simple yet delicious. Below are the ingredients and recipe to make this dish.</p>
+                <p>Steamed Chicken is a simple and healthy dish that involves cooking chicken through steaming, which helps retain its natural flavors and nutrients. The chicken, often a whole bird or pieces such as breasts or thighs, is usually seasoned with ingredients like ginger, garlic, green onions, and soy sauce. Steaming the chicken results in tender, juicy meat with a subtle, clean taste. This method of cooking is particularly popular in Asian cuisines, where the steamed chicken is often served with a flavorful dipping sauce made from soy sauce, sesame oil, and other seasonings. It's a light and nutritious dish that highlights the pure taste of the chicken.</p>
                 <img src="images/page1/steamedchicken.jpg" alt="Chicken Rice"> <!-- Image of Chicken Rice -->
                 <h3>Ingredients for Steamed Chicken:</h3>
                 <ul>
@@ -87,7 +87,7 @@
             <section class="subpage" id="subpage2">
                 <button class="backbtn">Back to Ingredients and Recipe</button>
                 <h3>Roasted Chicken</h3>
-                <p>Details about roasted chicken...</p>
+                <p>is a classic dish that involves cooking a whole chicken in an oven. The chicken is often marinated or seasoned with a blend of herbs, spices, and sometimes citrus or garlic, to enhance its flavor. During the roasting process, the chicken is cooked at high temperatures, which results in a crispy, golden-brown skin and juicy, tender meat. Roasted chicken can be served as a main course and is often accompanied by side dishes like roasted vegetables, potatoes, or rice. It is a versatile and widely enjoyed dish in many cuisines around the world.</p>
                 <img src="images/page1/roastedchicken.jpg" alt="Chicken Rice"> <!-- Image of Chicken Rice -->
                 <h3>Ingredients for Roasted Chicken:</h3>
                 <ul>
@@ -129,7 +129,7 @@
             <section class="subpage" id="subpage3">
                 <button class="backbtn">Back to Ingredients and Recipe</button>
                 <h3>Char Siew</h3>
-                <p>Details about char siew...</p>
+                <p>Char Siew is a popular Chinese dish that features barbecued pork. It is known for its distinctive flavor and appearance, typically characterized by a sweet, savory, and slightly smoky taste. The pork is marinated in a mixture of honey, five-spice powder, fermented tofu, soy sauce, hoisin sauce, and rice wine, which gives it a rich, red color. It is then roasted or grilled until the exterior is caramelized and slightly charred. Char Siew is often served as a main dish or used as a filling in buns and pastries.</p>
                 <img src="images/page1/charsiew.jpg" alt="Chicken Rice"> <!-- Image of Chicken Rice -->
                 <h3>Ingredients for Char Siew:</h3>
                 <ul>
