--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <section class="subpage" id="subpage2">
                 <button class="backbtn">Back to Ingredients and Recipe</button>
                 <h3>Roasted Chicken</h3>
-                <p>is a classic dish that involves cooking a whole chicken in an oven. The chicken is often marinated or seasoned with a blend of herbs, spices, and sometimes citrus or garlic, to enhance its flavor. During the roasting process, the chicken is cooked at high temperatures, which results in a crispy, golden-brown skin and juicy, tender meat. Roasted chicken can be served as a main course and is often accompanied by side dishes like roasted vegetables, potatoes, or rice. It is a versatile and widely enjoyed dish in many cuisines around the world.</p>
+                <p>Roasted Chicken is a classic dish that involves cooking a whole chicken in an oven. The chicken is often marinated or seasoned with a blend of herbs, spices, and sometimes citrus or garlic, to enhance its flavor. During the roasting process, the chicken is cooked at high temperatures, which results in a crispy, golden-brown skin and juicy, tender meat. Roasted chicken can be served as a main course and is often accompanied by side dishes like roasted vegetables, potatoes, or rice. It is a versatile and widely enjoyed dish in many cuisines around the world.</p>
                 <img src="images/page1/roastedchicken.jpg" alt="Chicken Rice"> <!-- Image of Chicken Rice -->
                 <h3>Ingredients for Roasted Chicken:</h3>
                 <ul>
