--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                 <!-- Trap the Chicken Game Section -->
                 <section id="trap-the-chicken">
                     <h2>Trap the Chicken</h2>
-                    <div id="instructions">
+                    <div id="instructions2">
                         <p>Place blocks to trap the chicken!</p>
                     </div>
                     <div id="gameArea"></div>
